--- a/_includes/selected_papers.liquid
+++ b/_includes/selected_papers.liquid
@@ -1,3 +1,3 @@
 <div class="publications">
-  {% bibliography --group_by none --query @*[selected=false]* %}
+  {% bibliography --group_by none --query @*[selected=true]* %}
 </div>
